Ansible/ACMKube/roles/prod/files/Kubernetes/nginx-test/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
